# threedee

./: .gitignore  README.md  pyproject.toml
threedee/: cli.py  github.py
